# drone-companion

./: .gitignore  Cargo.toml  README.md
apps/companiond/: Cargo.toml  build.rs
apps/companiond/src/: ai_health.rs  main.rs  supervise.rs
apps/log-inspect/: Cargo.toml
apps/log-inspect/src/: main.rs
apps/replay-mission/: Cargo.toml
apps/replay-mission/src/: main.rs
cc-dialect/: .gitignore  README.md  cc_dialect.xml  gen_c.sh  gen_rust.sh  hash.sh  requirements.txt
cc-dialect/golden/: build_golden.sh  gen_golden.c  golden_manifest.txt
cc-dialect/upstream/: PROVENANCE.md
crates/cc-ai-health/: Cargo.toml
crates/cc-ai-health/src/: detail.rs  finding.rs  lib.rs  phase.rs
crates/cc-ai-health/src/algos/: battery.rs  estimator.rs  gps.rs  link.rs  mission.rs  mod.rs  motor.rs  thermal.rs  vibration.rs
crates/cc-ai-health/src/stats/: cusum.rs  ewma.rs  mod.rs  page_hinkley.rs  rls.rs  robust.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: layer.rs  lib.rs  model.rs  validate.rs
crates/cc-health-tx/: Cargo.toml
crates/cc-health-tx/src/: lib.rs  policy.rs  scenario.rs
crates/cc-ingest/: Cargo.toml
crates/cc-ingest/src/: lib.rs
crates/cc-ingest/tests/: ingest_behavior.rs
crates/cc-link/: Cargo.toml
crates/cc-link/src/: clock.rs  lib.rs  transport.rs
crates/cc-link/tests/: link_behavior.rs
crates/cc-mission-log/: Cargo.toml
crates/cc-mission-log/src/: batch.rs  env.rs  events.rs  health.rs  ids.rs  inspect.rs  lib.rs  manifest.rs  mission.rs  params.rs  part.rs  raw.rs  schema.rs  segment.rs  shed.rs  task.rs  tests_lifecycle.rs  writer.rs
crates/cc-protocol/: Cargo.toml  build.rs
crates/cc-protocol/examples/: replay_capture.rs
crates/cc-protocol/src/: framing.rs  identity.rs  lib.rs  validate.rs
crates/cc-protocol/tests/: dialect_hash_consistency.rs  fuzz_decoder.rs  golden_roundtrip.rs
crates/cc-replay/: Cargo.toml
crates/cc-replay/src/: lib.rs  reader.rs
crates/cc-replay/tests/: roundtrip.rs
crates/cc-timesync/: Cargo.toml
crates/cc-timesync/src/: lib.rs  runner.rs
docs/: README.md  development_plan.md  fc_cc_comm_architecture.md
docs/phase1/: cc_protocol_crate.md  phase0_dialect_toolchain.md  phase1_protocol_layer.md
docs/phase2/: phase2_px4_telemetry.md
docs/phase3/: phase3_mavlink_link.md
docs/phase4/: phase4_companiond.md
docs/phase5/: phase5_mission_log.md
docs/phase6/: phase6_safety_loop.md
docs/phase7/: phase7_ai_health.md
tools/common/: pxh.py
tools/phase2/: README.md  build_px4.sh  sitl_phase2_check.py
tools/phase3/: README.md  gen_python.sh  sitl_phase3_check.py
tools/phase4/: README.md  sitl_phase4_check.py
tools/phase5/: README.md  sitl_phase5_check.py
tools/phase6/: README.md  sitl_phase6_check.py
