# drone-companion — Jetson-side Rust workspace (spec §5.1)
#
# Members are added as their phase implements them (dev plan):
#   Phase 1 : crates/cc-protocol
#   Phase 4 : crates/cc-link, crates/cc-timesync, crates/cc-ingest, apps/companiond
#   Phase 5 : crates/cc-mission-log, crates/cc-config, apps/log-inspect
#   Phase 6 : crates/cc-health-tx
#   Phase 7 : crates/cc-ai-health, crates/cc-replay, apps/replay-mission
[workspace]
resolver = "2"
members = [
    "apps/companiond",
    "apps/log-inspect",
    "crates/cc-config",
    "crates/cc-health-tx",
    "crates/cc-ingest",
    "crates/cc-link",
    "crates/cc-mission-log",
    "crates/cc-protocol",
    "crates/cc-timesync",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Wire-contract-critical dependencies are pinned EXACTLY (=x.y.z): a silent
# minor bump of the MAVLink implementation must never change the bytes we
# emit. Bump them deliberately, re-running the golden round-trip suite.
mavlink-core = { version = "=0.18.0", default-features = false, features = ["std"] }
mavlink-bindgen = "=0.18.0"
sha2 = "0.10"
# Required by the mavlink-bindgen-generated code (same set the official
# `mavlink` facade crate declares for its generated dialects).
bitflags = "2.9"
num-derive = "0.4"
num-traits = "0.2"
# Phase 4 runtime (spec §5.2): tokio multi-threaded runtime; serial transport
# for Phase 8 bench work compiled from day one (same interface as UDP).
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal", "io-util"] }
tokio-serial = "5"
cc-protocol = { path = "crates/cc-protocol" }
cc-link = { path = "crates/cc-link" }
cc-timesync = { path = "crates/cc-timesync" }
cc-ingest = { path = "crates/cc-ingest" }
cc-config = { path = "crates/cc-config" }
cc-mission-log = { path = "crates/cc-mission-log" }
cc-health-tx = { path = "crates/cc-health-tx" }
# Phase 5 mission dataset (spec §5.6). arrow + parquet are released in
# lockstep and MUST share one major — pinned together and re-verified with
# the schema round-trip suite on any bump (the same discipline as the
# mavlink =0.18.0 pin above). 59.x validated on this machine.
arrow = { version = "59", default-features = false }
parquet = { version = "59", default-features = false, features = ["arrow", "zstd", "snap"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# statvfs (free-space probe) + a portable fsync/rename surface; the only
# users are the real Clock/SpaceProbe/Syncer impls, behind test seams.
rustix = { version = "0.38", features = ["fs"] }
bytes = "1"
