[package]
name = "cc-config"
edition.workspace = true
version.workspace = true
license.workspace = true

# Layered configuration for companiond (spec §5.1, dev-plan Phase 5.1).
# Pure and synchronous: no tokio, no sockets. The only I/O is one optional
# config-file read; everything else is defaults + env + caller-supplied CLI
# overrides merged with strict per-field precedence.
[dependencies]
serde = { workspace = true }
toml = { workspace = true }
